...
        modifier = modifier
            .clip(MaterialTheme.shapes.medium)
            .background(MaterialTheme.colorScheme.surfaceContainer)
            .height(100.dp)
            .fillMaxWidth()
            .padding(16.dp)
            .testTag("GoalItem")
            .semantics(mergeDescendants = true) { isTraversalGroup = false },
        verticalAlignment = Alignment.CenterVertically,
        horizontalArrangement = Arrangement.SpaceBetween
    ) {
        CircleMoneyArc(
            spaceBetweenElements = false,
...
            Icon(Icons.Default.Create, contentDescription = null)
        }

        IconButton(
            onClick = onDelete,
            modifier = Modifier
                .testTag("GoalDeleteButton")
        ) {
            Icon(Icons.Default.Delete, contentDescription = null)
        }
    }
}

...
